--- a/WineStore/src/main/resources/templates/common.html
+++ b/WineStore/src/main/resources/templates/common.html
@@ -1,7 +1,7 @@
 
 <!--Header-->
 <head th:fragment="head" xmlns:th="http://www.thymeleaf.org">
-  <title>Perfume</title>
+  <title>Wine</title>
 
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
