--- a/OnlineShop/src/main/resources/templates/menu.html
+++ b/OnlineShop/src/main/resources/templates/menu.html
@@ -11,6 +11,10 @@
 
 <div id="container">
     <div class="container">
+
+
+
+
         <div class="d-flex">
             <nav id="sidebar">
                 <div class="sidebar-header">
@@ -487,10 +491,13 @@
                     </div>
                 </div>
             </div>
+        <div class='scrolltotop'></div>
+        </div>
     </div>
 </div>
-<div id="scrollToTop" onclick="goUp();">ВВЕРХ </div>
-<footer th:insert="~{parts/common :: footer}"></footer>
 
+<footer th:insert="~{parts/common :: footer}"></footer>
+<script src="../static/js/index.js"></script>
+<script src="../static/js/jQuery.js"></script>
 </body>
 </html>
