--- a/OnlineShop/src/main/resources/templates/parts/common.html
+++ b/OnlineShop/src/main/resources/templates/parts/common.html
@@ -32,8 +32,9 @@
     </div>
 
     <div class="container-fluid bg-black">
-        <nav class="container navbar navbar-expand-lg bg-black text-white" style="font-size: 18px" >
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="  navbar navbar-expand-lg navbar-light bg-black" style="font-size: 18px" >
+            <button
+                    class="navbar-toggler bg-white " type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -51,10 +52,10 @@
 
                 <ul class="navbar-nav ml-auto">
 
-                    <form class="search-box form-inline d-flex justify-content-center md-form form-sm mr-3" method="get" action="/search">
-                        <input class="search-txt form-control form-control-sm mr-3 w-75 rounded-0" type="text" name="filter" placeholder="Пошук"
+                    <form class="formbox" method="get" action="/search">
+                        <input class="inputbox " type="text" name="filter" placeholder="Пошук"
                                aria-label="Search" />
-                        <button type="submit" class="bg-black"><i class="fas fa-search fa-1x" aria-hidden="true" style="color:white"></i></button>
+                        <button type="submit" class="buttonbox "><i class="fas fa-search fa-1x" aria-hidden="true" style="color:white"></i></button>
                     </form>
 
                     <li class="nav-item">
@@ -185,7 +186,8 @@
                 <h3>Wine Store</h3>
                 <p>(099) 011-25-68</p>
                 <br/>
-                <p>з 08:00 до 23:00 без перерв і вихідних</p>
+                <p>winestore@gmail.com</p>
+
             </div>
             <div class="footer-right">
                 <h3>Ми в соцмережах</h3>
